--- a/src/styles/Videos.css
+++ b/src/styles/Videos.css
@@ -76,3 +76,24 @@
   background-size: auto 100%;
   overflow: hidden;
 }
+@media (max-width: 900px) {
+  #Titulo-Visita{
+    font-size: 3rem;
+    width: 100%;
+    padding: 50px;
+    margin-top: -50px;
+  }
+  .Presentacion-Visita{
+    font-size: 1rem;
+  }
+  .Presentacion-Visita h3{
+    width: 80vw;
+  }
+  .Videos h2{
+    font-size: 1.5rem;
+  }
+  .Videos img{
+    height: 250px;
+    width: 90vw;
+  }
+}
