--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -28,14 +28,6 @@
   margin-top: -5px;
   margin-bottom: -15px;
 }
-.welcome-text p{
-  font-size: 1rem;
-  color: #bbb9b9;
-  font-family: 'Orliet';
-  letter-spacing: 0.01px;
-  margin-top: -5px;
-  margin-bottom: -15px;
-}
 
 #video-background-welcome {
   position: absolute;
@@ -46,4 +38,20 @@
   object-fit: contain;   /* <-- Esto hace que se vea entero */
   z-index: -1;
   filter: brightness(0.2);
+}
+@media (max-width: 900px) {
+  .welcome-container{
+    margin-top: 200px;
+    margin-bottom: -600px;
+  }
+  .welcome-text{
+    margin-top: -325px;
+  }
+  .welcome-text h2{
+    font-size: 1.5rem;
+    padding: 5px;
+  }
+  .welcome-text h1{
+    font-size: 3rem;
+  }
 }
