--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -150,7 +150,7 @@
   .header {
     height: 100vh;
     padding: 0 1rem;
-    width: 100vw;
+    width: 100%;
     overflow: auto;
     
   }
@@ -160,7 +160,7 @@
     width: 100vw;
   }
   .logo-main img {
-    height: 120px;
+    height: 250px;
   }
   .logo-small img {
     display: none;
@@ -171,5 +171,10 @@
     display: flex;
     flex-direction: column;
     margin-right: 0;
+  }
+   #video-background {
+    min-width: 100%;
+    width: 100%;
+    left: 0;
   }
 }
