--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -241,7 +241,7 @@
   }
   .timeline-item {
     min-width: 0;
-    width: 90vw;
+    width: 60vw;
     margin: 0 0 40px 0;
     align-self: flex-start;
     transform: none !important;
@@ -267,5 +267,8 @@
     margin-bottom: 40px;
     align-self: flex-start;
     transform: none;
+  }
+  .popup{
+    width: 80vw;
   }
 }
