--- a/src/styles/AboutPage.css
+++ b/src/styles/AboutPage.css
@@ -240,6 +240,7 @@
   .title-container {
     flex-direction: column;
     align-items: center;
+    height: auto !important;
   }
   .about-title, .img-separador-wrapper {
     width: 100vw;
@@ -254,6 +255,9 @@
   .about-title h1{
     font-size: 3rem;
     padding-bottom: 15px;
+  }
+  .about-title button{
+    margin-top: 20px;
   }
   .img-separador {
     width: 100vw;
@@ -290,6 +294,8 @@
   .Inicios, .Avance, .Pandemia, .Renovamos{
     display: flex;
     flex-direction: column;
+    border-top: solid 1px rgb(157, 160, 157);
+    border-bottom: solid 1px rgb(157, 160, 157);
   }
   .Texto-Inicio,.Texto-Avance,.Texto-Pandemia, .Texto-Renovamos{
     margin-left: 20px;
